<resources>
    <string name="app_name">Tips Calculator</string>
    <string name="main_subtitle">Fill in the fields below to calculate your bill.</string>
    <string name="bill_amount">Enter the bill amount: </string>
    <string name="number_of_people">Number of People:</string>
    <string name="percentage">Tips percentage:</string>
    <string name="calculate">Calculate</string>
    <string name="clean">Clean</string>
    <string name="summary">Summary</string>
    <string name="bill_details">Here is the summary of your bill:</string>
    <string name="total_table">Total table:</string>
    <string name="num_of_people">Num of people:</string>
    <string name="percentage_details">Percentage:</string>
    <string name="refresh">REFRESH</string>
</resources>